force-app/main/default/objects/copado__Application__c/fields/copado__Parent_Application__c.field-meta.xml
<CustomField>
    <fullName>copado__Parent_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Application</label>
    <referenceTo>copado__Application__c</referenceTo>
    <relationshipLabel>Sub-Applications</relationshipLabel>
    <relationshipName>Sub_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>