force-app/main/default/objects/copado__Application__c/fields/copado__Release_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Release_Status__c</fullName>
    <label>Release Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Definition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>