force-app/main/default/objects/copado__Application__c/fields/copado__Stability_Icon__c.field-meta.xml
<CustomField>
    <fullName>copado__Stability_Icon__c</fullName>
    <formula>TEXT(copado__Stability__c) + &quot; &quot; +
IMAGE( 
CASE( copado__Stability__c, 
&quot;Stable&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Uncertain&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Unstable&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Stability Icon&quot;)</formula>
    <label>Stability Status</label>
    <type>Text</type>
</CustomField>